[gd_scene load_steps=5 format=3 uid="uid://c454wufka48s"]

[ext_resource type="Script" uid="uid://u14ek0umtyt6" path="res://src/scenes/result/Result.gd" id="1_kh82h"]
[ext_resource type="Texture2D" uid="uid://7su6ft7227oq" path="res://assets/images/result.png" id="1_s4wc2"]
[ext_resource type="LabelSettings" uid="uid://ocau00etiel2" path="res://assets/fonts/font_result.tres" id="2_re1be"]
[ext_resource type="Theme" uid="uid://cjqdw4nibxjst" path="res://assets/fonts/ui_48.tres" id="4_x1ei3"]

[node name="Result" type="Node2D"]
script = ExtResource("1_kh82h")

[node name="Result" type="Sprite2D" parent="."]
position = Vector2(640, 512)
scale = Vector2(4, 4)
texture = ExtResource("1_s4wc2")

[node name="GainItem" type="Label" parent="."]
offset_left = 552.0
offset_top = 584.0
offset_right = 728.0
offset_bottom = 641.0
text = "999"
label_settings = ExtResource("2_re1be")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClearTime" type="Label" parent="."]
offset_left = 512.0
offset_top = 800.0
offset_right = 768.0
offset_bottom = 857.0
text = "59:59.999"
label_settings = ExtResource("2_re1be")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemMarker" type="Marker2D" parent="."]
position = Vector2(640, 448)

[node name="Button" type="Button" parent="."]
offset_left = 944.0
offset_top = 832.0
offset_right = 1216.0
offset_bottom = 893.0
theme = ExtResource("4_x1ei3")
text = "Go to Title"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
